--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
-
-*, *::before, *::after{
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Old+Standard+TT&family=Sahitya&display=swap');*, *::before, *::after{
     box-sizing: border-box;
     font-family: 'Bangers', cursive;
 }
@@ -26,6 +24,9 @@ body{
     box-shadow: 0 0 10px 2px;
 
 }
+.imageBox{
+    width:80%;
+}
 .imageBox img{
     width: 100%;
 
@@ -46,9 +47,20 @@ body{
     display:flex;
     flex-wrap: wrap;
 }
-.statInfo span{
+.statInfo div{
     width:50%
 }
+.skillSpan{
+    color:green;
+}
+.skillSpan.hp{
+    color:rgb(253,14,53);
+}
+.skillSpan.energy{
+    color:rgb(100,149,237);
+}
+
+
 .inventory{
     width:100%;
     height:60%;
@@ -76,10 +88,14 @@ body{
 .introTop,
 .introBottom{
     text-align: center;
-    height:10vh;
+    max-height:15vh;
 }
 .hideContainer{
-    display:none;
+    display:none !important;
+}
+.showFlexContainer
+{
+    display:flex !important;
 }
 .btn-grid {
     display:grid;
@@ -89,7 +105,9 @@ body{
 
 
 }
-.btn {background-color: hsl(200, 100%, 50%);
+.btn {
+    font-family: 'Sahitya', serif;
+    background-color: hsl(200, 100%, 50%);
     border: 1px solid  hsl(200, 100%, 50%);
     border-radius: 5px;
     padding: 5px 10px;
@@ -102,3 +120,98 @@ body{
 .summary{
     display:none;
 }
+.notifications{
+    font-family: 'Old Standard TT', serif;
+    width: 800px;
+    max-width:80%;
+    max-height: 100px;
+    overflow-y: auto;
+    background-color:rgb(207,207,196);
+    padding:10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 2px;
+
+
+}
+.notifications div{
+    font-family: 'Old Standard TT', serif;
+}
+.notifications div span {
+    text-decoration: underline;
+    
+}
+/*Dev console */
+
+.devConsole{
+   
+    height:25%;
+    display:none;
+    flex-direction: column;
+    gap:20px;
+    margin-bottom: 5vh;
+    width: 800px;
+    max-width:80%;
+    background-color:white;
+    padding:10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 2px;
+}
+.devConsole h2{
+    margin: 0 auto;
+    text-align:center;
+    font-family: 'Open Sans', sans-serif;
+}
+.devMain{
+    display:flex;
+    gap: 20px;
+    max-height:80%;
+    
+}
+.stateList-Container{
+    border: 2px solid black;
+    background-color:#d3d3d3;
+    width: 30%;
+    max-height: 90%;
+    
+
+}
+.stateList-Container ul{
+    font-family:'Times New Roman', Times, serif ;
+    overflow-y: auto;
+    height: 50%;
+    font-size: clamp(0.8rem, 1.1vh, 1rem);
+    
+}
+
+.inventoryBox{
+    display:flex;
+    flex-wrap: wrap;
+    text-align: center;
+    gap:5%;
+    padding-left:5%;
+}
+.inventoryBox div{
+    background-color:rgb(51,51,51);
+    width:27%;
+    height:5vh;
+    border:2px solid black;
+    margin-bottom: 5%;
+    font-size:0.5rem;
+
+}
+.inventoryBox div .itemInfo{
+    display: none;
+    text-align:left;
+    position:relative;
+    font-size:0.5vw;
+    font-family:'Times New Roman', Times, serif;
+    top: -50%;
+    background-color:rgb(244,240,236, 0.4);
+    width:400%;
+    max-height:fit-content
+
+}
+.inventoryBox div:hover > .itemInfo {
+    display: block;
+    
+  }
